--- a/Scheduling Algorithms/Scheduling Algorithms.vcxproj
+++ b/Scheduling Algorithms/Scheduling Algorithms.vcxproj
@@ -106,7 +106,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -120,7 +120,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -129,18 +129,24 @@
   <ItemGroup>
     <ClCompile Include="FCFS.cpp" />
     <ClCompile Include="Process.cpp" />
+    <ClCompile Include="Render.cpp" />
     <ClCompile Include="RoundRobin.cpp" />
     <ClCompile Include="SchedSim.cpp" />
     <ClCompile Include="SchedStats.h" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Process.h" />
+    <ClCompile Include="SimInfo.cpp" />
     <ClCompile Include="SJF.cpp" />
+    <ClCompile Include="WindowProc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FCFS.h" />
+    <ClInclude Include="Render.h" />
     <ClInclude Include="RoundRobin.h" />
     <ClInclude Include="SchedSim.h" />
+    <ClInclude Include="SimInfo.h" />
     <ClInclude Include="SJF.h" />
+    <ClInclude Include="WindowProc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
